--- a/molecule/ec2/molecule.yml
+++ b/molecule/ec2/molecule.yml
@@ -3,19 +3,19 @@ dependency:
   name: galaxy
   options:
     role-file: requirements.yml
-driver:
-  name: ec2
 lint:
   name: yamllint
+driver:
+  name: ec2
 platforms:
-  # - name: rhel-7
-  #   image: ami-c86c3f23
-  #   instance_type: t2.micro
-  #   vpc_subnet_id: subnet-0e688067
-  # - name: sles-15
-  #   image: ami-0a1886cf45f944eb1
-  #   instance_type: t2.micro
-  #   vpc_subnet_id: subnet-0e688067
+  - name: update-rhel-7
+    image: ami-c86c3f23
+    instance_type: t2.micro
+    vpc_subnet_id: subnet-0e688067
+  - name: update-sles-15
+    image: ami-0a1886cf45f944eb1
+    instance_type: t2.micro
+    vpc_subnet_id: subnet-0e688067
   - name: update-ubuntu-18.04
     image: ami-0bdf93799014acdc4
     instance_type: t2.micro
@@ -34,11 +34,11 @@ platforms:
     vpc_subnet_id: subnet-0e688067
 provisioner:
   name: ansible
+  playbooks:
+    prepare: ../resources/prepare.yml
+    converge: ../resources/playbook.yml
   lint:
     name: ansible-lint
-  config_options:
-    defaults:
-      callback_plugins: /usr/lib/python2.7/site-packages/ara/plugins/callbacks
   inventory:
     host_vars:
       update-ubuntu-18.04:
