--- a/molecule/resources/playbook.yml
+++ b/molecule/resources/playbook.yml
@@ -1,9 +1,8 @@
 ---
 - name: Converge
   hosts: all
-  become: true
-  gather_facts: false
+  become: yes
+  gather_facts: yes
 
   roles:
-    - robertdebock.bootstrap
     - ansible-role-update
