Fix [DEPRECATION WARNING]
evaluating update_reboot as a bare variable, this
behaviour will go away and you might need to add |bool to the expression in the
 future. Also see CONDITIONAL_BARE_VARS configuration toggle.. This feature
will be removed in version 2.12. Deprecation warnings can be disabled by
setting deprecation_warnings=False in ansible.cfg.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -114,6 +114,6 @@
       update_result_yum_6.changed or
       update_result_yum_7.changed or
       update_result_zypper.changed
-    - update_reboot
+    - update_reboot | bool
   tags:
     - skip_ansible_lint
