--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,4 +13,4 @@ update_cache_valid_time: 1
 # When updating systems, a reboot may be required. Here you can select to:
 # "yes": Always reboot when packages have changed.
 # "no": Never reboot when packages have changed.
-update_reboot: yes
+update_reboot: no
