--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -9,8 +9,9 @@ on:
   push:
     tags_ignore:
       - '*'
+  pull_request:
   schedule:
-    - cron: '11 10 21 * *'
+    - cron: '0 11 21 * *'
 
 jobs:
   lint:
