Test is a defined variable is a string.

--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -11,6 +11,7 @@
   assert:
     that:
       - update_upgrade_command is defined
+      - update_upgrade_command is string
       - update_upgrade_command in [ "dist", "full", "yes", "safe" ]
     quiet: yes
 
