--- a/.github/workflows/requirements.yml
+++ b/.github/workflows/requirements.yml
@@ -2,6 +2,8 @@
 on:
   - push
 
+name: Ansible Graphviz
+
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -13,7 +15,7 @@ jobs:
       - name: graphviz
         uses: robertdebock/graphviz-action@1.0.0
       - name: savepng
-      - uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: requirements
           path: requirements.*
