--- a/.github/workflows/requirements.yml
+++ b/.github/workflows/requirements.yml
@@ -12,8 +12,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: "${{ github.repository }}"
-      - name: graphviz
-        uses: robertdebock/github-graphviz-action@1.0.1
+      - name: requirements2png
+        uses: robertdebock/graphviz-action@1.0.1
       - name: savepng
         uses: actions/upload-artifact@v2
         with:
