--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -18,4 +18,6 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: requirements
-          path: requirements.*
+          path: |
+            /requirements.*
+            !/requirements.yml
