--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -14,6 +14,8 @@ jobs:
           path: "${{ github.repository }}"
       - name: requirements2png
         uses: robertdebock/graphviz-action@1.0.5
+      - run: ls -l
+      - run: pwd
       - name: savepng
         uses: actions/upload-artifact@v2
         with:
