--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -12,16 +12,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: "${{ github.repository }}"
-      - name: requirements2png
+      - name: create png
         uses: robertdebock/graphviz-action@1.0.5
-      - run: ls -l
-      - run: ls -l robertdebock
-      - run: ls -l "${GITHUB_REPOSITORY}"
-      - run: pwd
-      - name: savepng
-        uses: actions/upload-artifact@v2
+      - name: save png
+        uses: ad-m/github-push-action@master
         with:
-          name: dotandpng
-          path: |
-            ${{ github.repository }}/requirements.dot
-            ${{ github.repository }}/requirements.png
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: png
