--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -18,4 +18,5 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          directory: ${{ github.repository }}
           branch: png
