--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -14,6 +14,8 @@ jobs:
           path: "${{ github.repository }}"
       - name: create png
         uses: robertdebock/graphviz-action@1.0.5
+      - name: debug
+        run: ls -l ${{ github.repository }}
       - name: save png
         uses: ad-m/github-push-action@master
         with:
