--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -21,4 +21,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           directory: ${{ github.repository }}
+          force: yes
           branch: png
