--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           directory: ${{ github.repository }}
-          force: yes
+          force: true
           branch: png
