--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -16,6 +16,11 @@ jobs:
         uses: robertdebock/graphviz-action@1.0.5
       - name: debug
         run: ls -l ${{ github.repository }}
+      - name: Commit files
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -m "Add generated files" -a
       - name: save png
         uses: ad-m/github-push-action@master
         with:
