--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -18,6 +18,7 @@ jobs:
         run: ls -l ${{ github.repository }}
       - name: Commit files
         run: |
+          cd ${{ github.repository }}
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git commit -m "Add generated files" -a
