--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,8 +2,9 @@
 # tasks file for update
 
 - name: include assert.yml
-  include_tasks: assert.yml
+  import_tasks: assert.yml
   run_once: yes
+  delegate_to: localhost
 
 - name: configure apk
   block:
