--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -71,7 +71,7 @@
 
     - name: configure 7
       block:
-        - name: update all software (yum/7)  # noqa package-latest This role is to update packages.
+        - name: update all software (yum/7)
           ansible.builtin.yum:
             name: "*"
             state: latest  # noqa package-latest This role is to update packages.
