fix: 🐛 apt autoremove condition
Signed-off-by: Leny1996 <8152038+Leny1996@users.noreply.github.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,7 +36,7 @@
         autoremove: "{{ update_autoremove }}"
       when:
         - ansible_pkg_mgr == "apt"
-        - update_autoremove == "yes"
+        - update_autoremove | bool
   when:
     - ansible_pkg_mgr == "apt"
 
