--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,7 +36,7 @@
         autoremove: "{{ update_autoremove }}"
       when:
         - ansible_pkg_mgr == "apt"
-        - update_autoremove | bool
+        - update_autoremove
   when:
     - ansible_pkg_mgr == "apt"
 
