Don't use bool, we've tested the variable earlier.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,5 +4,5 @@
 - name: reboot
   ansible.builtin.reboot:
   when:
-    - update_reboot | bool
+    - update_reboot
     - ansible_connection not in [ "container", "docker", "community.docker.docker" ]
