--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -71,20 +71,20 @@
       when:
         - ansible_distribution_major_version == "6"
 
-    - name: Update all software (yum/7)
-      ansible.builtin.yum:
-        name: "*"
-        state: latest  # noqa package-latest This role is to update packages.
-      notify:
-        - Reboot
+    - name: Update yum non-6
       when:
-        - ansible_distribution_major_version == "7"
+        - ansible_distribution_major_version != "6"
+      block:
+        - name: Update all software (yum)
+          ansible.builtin.yum:
+            name: "*"
+            state: latest  # noqa package-latest This role is to update packages.
+          notify:
+            - Reboot
 
-    - name: Install yum-utils
-      ansible.builtin.package:
-        name: yum-utils
-      when:
-        - ansible_distribution_major_version == "7"
+        - name: Install yum-utils
+          ansible.builtin.package:
+            name: yum-utils
 
 - name: Update all software (zypper)
   community.general.zypper:
