Test Ansible 8 and RHEL9 (if applicable)

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,6 +17,7 @@ galaxy_info:
     - name: EL
       versions:
         - "8"
+        - "9"
     - name: Debian
       versions:
         - all
@@ -32,5 +33,7 @@ galaxy_info:
 
   galaxy_tags:
     - update
+    - security
+    - system
 
 dependencies: []
