Fix Debian release mix-up.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,3 +14,10 @@ update_cache_valid_time: 1
 # "yes": Always reboot when packages have changed.
 # "no": Never reboot when packages have changed.
 update_reboot: yes
+
+# You can exclude certain packages from being updated.
+# Some Ansible modules do not support this option, so this variable works for only:
+# - apt
+# - dnf
+# - yum
+update_excluded_packages: []
