Remove faulty test.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,4 +20,8 @@ update_reboot: yes
 # - apt
 # - dnf
 # - yum
+#
+# Example:
+# update_excluded_packages:
+#   - kernel
 update_excluded_packages: []
