--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -14,7 +14,7 @@ lint: |
 driver:
   name: docker
 platforms:
-  - name: "update-${image:-fedora}-${tag:-latest}${TOX_ENVNAME}"
+  - name: "update-${image:-fedora}-${tag:-latest}"
     image: "${namespace:-robertdebock}/${image:-fedora}:${tag:-latest}"
     command: /sbin/init
     cgroupns_mode: host
